# gpu-text-harvest

./: .gitignore  20251205-CLAUDE_MEMORY.md  CUDA_SETUP.md  README.md  config.sh.example  environment.yml  pyproject.toml
gpu_text_harvest/: __init__.py  cli.py
scripts/: attach.sh  kill.sh  monitor.sh  run-clean.sh  run-extract.sh  run-legend-chunk.sh  run-legend-csv.sh  run.sh
src/: 01_pdf_to_text.py  02_clean_text.py  03_extract_legends.py  04_legends_to_csv.py
